--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,7 @@ img {
   margin-top: 13px;
 }
 .discover-items__link {
+  position: relative;
   font-family: "Gotham";
   font-weight: 100;
   font-size: 14px;
