--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@
   src: url(../fonts/Gotham-Book-Regular.woff2) format('woff2');
 }
 
-/* fonts */
 @font-face {
   font-family: 'Gotham Narrow';
   font-style: italic;
@@ -175,12 +174,14 @@ img {
 .discover-items {
   display:flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   margin-top: 47px;
 }
 
 .discover-items__item {
   display: flex;
   flex-direction: column;
+  margin-bottom: 20px;
   flex-basis: 285px;
   background: #fff;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1);
