--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,6 @@
   src: url(../fonts/Gotham-Light.woff2) format('woff2');
 }
 /* fonts end */
-h1,h2,h3,h4,h5,h6 {
-  margin: 0;
-}
 
 p {
   margin: 0;
@@ -50,6 +47,12 @@ p {
 img {
   width: 100%;
   height: auto;
+}
+
+.bg-pos {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
 }
 
 .title {
@@ -70,7 +73,8 @@ img {
 .container {
 	margin: 0 auto;
 	width: 100%;
-	max-width: 1200px;
+	/* max-width: 1200px; */
+  /* min-width: 320px; */
 	/* padding: 0 15px; */
 
 }
@@ -81,12 +85,19 @@ img {
 	align-items: center;
 }
 
+.header-logo,
+.footer-logo {
+  flex-shrink: 0;
+  flex-basis: 179px;
+}
+
 .header {
 	padding: 25px 0 23px 0;
 }
 
 .header-menu__list {
 	display: flex; 
+  flex-wrap: wrap;
 }
 
 .header-menu__list-item {
@@ -134,7 +145,6 @@ img {
   font-weight: 700;
   font-size: 64px;
   text-transform: uppercase;
-  margin: 0;
   letter-spacing: normal;
 }
 
@@ -228,7 +238,6 @@ img {
 /* experience */
 
 .experience {
-  background: url("../img/experoence-bg.jpg") no-repeat top center / cover;
   padding: 74px 0 81px 0;
 }
 
@@ -299,12 +308,10 @@ img {
 /* order */
 
 .order {
-  background: url("../img/slider-3.jpg") no-repeat top center / cover;
   padding: 135px 0;
 }
 .ordrt-box {
   background-color: rgb(0, 0, 0, 0.5);
-  /* opacity: 0.5; */
   text-align: center;
   color: #fff;
   padding: 65px 100px;
@@ -319,7 +326,7 @@ img {
   font-weight: 100;
   line-height: 30px;
   margin: 38px auto;
-  width: 980px;
+  /* width: 980px; */
 }
 .order-box__link {
   display: inline-block;
@@ -380,3 +387,32 @@ img {
 
 
 /* end footer */
+
+
+
+
+
+
+/* media  */
+
+@media (min-width: 576px) {
+  .discover-title {font-size: 28px;}
+}
+
+@media (min-width: 768px) {
+
+}
+
+@media (min-width: 992px) {
+
+}
+
+@media (min-width: 1200px) {
+
+}
+
+@media (min-width: 1400px) {
+
+}
+
+/* end media */
