поправил высоту слайдера и переделал его

--- a/css/style.css
+++ b/css/style.css
@@ -120,12 +120,11 @@ img {
 
 }
 
-/* .welcome {
-	max-height: 630px;
-} */
-
-.welcome-slider {
-  position: relative;
+.welcom-slide__img {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 630px;
   width: 100%;
 }
 
