--- a/css/media.css
+++ b/css/media.css
@@ -39,6 +39,13 @@
      .why {
          padding-top: 30px;
      }
+     .why-title {
+         font-size: 25px;
+     }
+
+    .why-list {
+        padding-top: 25px;
+    }
      .why-list__item {
          margin-bottom: 20px;
      }
@@ -56,6 +63,13 @@
          padding: 20px 60px;
          font-size: 16px;
      }
+     .discover {
+         padding-top: 25px;
+     }
+
+    .discover-title {
+        font-size: 25px;
+    }
 }   
 
 @media (max-width: 767.98px) {
