--- a/css/style.css
+++ b/css/style.css
@@ -122,19 +122,18 @@ img {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 630px;
+  min-height: 630px;
   width: 100%;
 }
 
 .welcome-slider__text {
-  position: absolute;
-  left:0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 248px;
+  padding-bottom: 230px;
   color: #fff;
-  margin-left: 7px;
 }
 
 .welcome-slider__text-title {
@@ -154,7 +153,7 @@ img {
   font-family: "Gotham";
   font-weight: 100;
   font-size: 32px;
-  margin: 20px 0 0 0;
+  margin-top: 4px;
 }
 
 /* discover */
@@ -384,6 +383,14 @@ img {
   display: flex;
   justify-content: space-between;
 }
+
+.footer-nav__title {
+  font-size: 18px;
+  color: #ee2255;
+  font-family: "Gotham";
+  font-weight: 700;
+}
+
 .footer-container__nav-box {
   display: flex;
   justify-content: space-between;
