--- a/css/style.css
+++ b/css/style.css
@@ -74,15 +74,7 @@ img {
 	margin: 0 auto;
 	width: 100%;
 	max-width: 1200px;
-  /* min-width: 320px; */
-	/* padding: 0 15px; */
 
-}
-
-.header_container {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
 }
 
 .header-logo,
@@ -141,7 +133,6 @@ img {
   font-weight: 700;
   font-size: 64px;
   text-transform: uppercase;
-  letter-spacing: normal;
 }
 
 .welcome-slider__text-title span {
@@ -206,6 +197,7 @@ img {
   margin-top: 13px;
 }
 .discover-items__link {
+  position: relative;
   font-family: "Gotham";
   font-weight: 100;
   font-size: 14px;
@@ -213,7 +205,19 @@ img {
   text-transform: uppercase;
   color: #aee0cf;
   background: #3dbe98;
-  padding: 20px 20px 17px 20px ;
+  padding: 16px 20px 14px 20px ;
+}
+
+.discover-items__link::after {
+  content: "";
+  position: absolute;
+  background-image: url("../img/arrow.png");
+  background-repeat: no-repeat;
+  bottom: 0;
+  top: 20px;
+  right: 0;
+  left: 238px;
+  background-size: 20px 20px;
 }
 
 .discover-items__link span {
@@ -230,10 +234,14 @@ img {
   color: #333;
 }
 
+.discover-form {
+  display: flex;
+}
+
 .discover-form__select { 
   font-family: "Gotham Book";
   font-weight: 100;
-  width: 670px;
+  /* width: 670px; */
   font-size: 20px;
   padding: 14px 25px;
   background-color: #fff;
