--- a/css/style.css
+++ b/css/style.css
@@ -386,7 +386,8 @@ img {
 /* footer */
 
 .footer {
-  padding: 41px 0 53px 0;
+  padding-top: 41px;
+  padding-bottom: 53px;
 }
 .footer-container {
   display: flex;
