--- a/css/media.css
+++ b/css/media.css
@@ -3,6 +3,112 @@
         padding: 0;
     }
 
+    .header-menu__list-item {
+        padding: 0;
+        border-right: none;
+    }
+    .header-menu__list-item:last-child {
+        padding: 0;
+    }
+
+    .welcome-slider__text {
+        padding-top: 115px;
+        padding-bottom: 115px;
+    }
+
+    .welcome-slider__text-title {
+        font-size: 28px;
+    }
+    .welcome-slider__text-subtitle {
+        font-size: 16px;
+    }
+
+    .experience {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+    .experience__title {
+        font-size: 25px;
+     }
+     .experience-box {
+         margin: 130px auto 0;
+     }
+     .why {
+         padding-top: 30px;
+     }
+     .why-title {
+         font-size: 25px;
+     }
+
+    .why-list {
+        padding-top: 25px;
+    }
+     .why-list__item {
+         margin-bottom: 20px;
+     }
+     .order {
+        padding: 40px 0;
+     }
+     .ordrt-box {
+         padding: 20px;
+     }
+     .order-box__title {
+         font-size: 25px;
+     }
+
+     .order-box__link {
+         padding: 20px 60px;
+         font-size: 16px;
+     }
+     .discover {
+         padding-top: 25px;
+     }
+
+    .discover-title {
+        font-size: 25px;
+    }
+
+    .discover-form {
+        display: block;
+        text-align: center;
+        padding: 0;
+    }
+    .discover-form__select {
+        margin-top: 10px;
+    }
+} 
+
+
+@media (min-width: 576px) {
+    
+}
+
+@media (min-width: 768px) {
+
+}
+
+@media (min-width: 992px) {
+
+}
+
+@media (min-width: 1200px) {
+
+}
+
+@media (min-width: 1400px) {
+
+}
+
+
+
+
+
+
+/* @media (max-width: 575.98px) {
+    .header {
+        padding: 0;
+    }
+
     .header-menu__list {
         
     }
@@ -75,10 +181,21 @@
     .discover-title {
         font-size: 25px;
     }
+
+    .discover-form {
+        display: block;
+        text-align: center;
+        padding: 0;
+    }
+    .discover-form__select {
+        margin-top: 10px;
+    }
 }   
 
 @media (max-width: 767.98px) {
-
+    .header-menu__list-item:last-child {
+        padding: 0;
+    }
 }
 
 @media (max-width: 991.98px) {
@@ -91,4 +208,4 @@
 
 @media (max-width: 1399.98px) {
 
-}
+} */
